--- a/html/css/style.css
+++ b/html/css/style.css
@@ -245,7 +245,7 @@ html, body {
 ##################################################*/
 .logomenu:hover{
     transform: scale(1.1);
-    max-height: 60px;
+    size: 50%;
 }
 @media screen and (max-width: 767px) {
 .logomenu{
