--- a/html/css/style.css
+++ b/html/css/style.css
@@ -246,8 +246,8 @@ html, body {
 .logomenu:hover{
     transform: scale(1.1);
 }
-.logomenu {
-  max-height: 60px;
+.logo-image{
+  background-color: blue;
 }
 @media screen and (max-width: 767px) {
 .logomenu{
