--- a/html/css/style.css
+++ b/html/css/style.css
@@ -73,10 +73,12 @@ html, body {
   font-size: 11px;
 }
 
-.text-size-1-5vw {
+.text-size-1-1vw {
  font-size: 1.1vw; 
 }
-
+.text-size-1-5vw {
+ font-size: 1.5vw; 
+}
 .text-my-grey {
     color : grey;
 }
