--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -13,7 +13,9 @@ html, body {
   margin: 0px auto;
   width:100%;
 }
-
+.ajoutMP{
+  color:yellow;
+}
 /*drawing the line itself */
 .timeline:before{
   content:'';
