--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -15,7 +15,7 @@ html, body {
 }
 .ajoutMP{
   color:black;
-  font-size: 1vw;
+  font-size: 15px;
   font-weight: bold;
 }
 /*drawing the line itself */
