--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -32,7 +32,6 @@ html, body {
   font-size: 14px;
 }
 
-
 /**********************************
 ***********TIMELINE****************
 **********************************/
@@ -126,7 +125,7 @@ html, body {
 }
 
 
-
+/*
 @media screen and (min-width: 1400px) {
 h1 {
    width: 100%;
@@ -189,7 +188,7 @@ h1 {
     size: 120%;
     padding-right: 5%;
 }
-/*TIMELINE*/ 
+/*TIMELINE 
 .timeline{
   width:100%;
   padding-bottom:0;
