--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -70,7 +70,7 @@ html, body {
   position:relative;
   width:50%;
   padding:5px 35px;
-  z-index:99;
+  background-color: green;
 }
 
 /*for every odd numbered bullet point, align to the left*/
