--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -71,7 +71,7 @@ html, body {
   list-style: none;
   position:relative;
   width:60%;
-  padding:5px 35px;
+  padding:5px;
   background-color: green;
 }
 
