--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -81,6 +81,7 @@ html, body {
   float:left;
   clear:both; /*each step doesn't overlap the other vertically */
   background-color: blue;
+  width: 120%;
 }
 
 /* for every even numbered bullet point, align to the right */
