--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -81,7 +81,8 @@ html, body {
   float:left;
   clear:both; /*each step doesn't overlap the other vertically */
   background-color: blue;
-  width: 50%;
+  right: 8%;
+  width: 42%;
 }
 
 /* for every even numbered bullet point, align to the right */
