--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -119,20 +119,20 @@ html, body {
   text-align:center;
   padding-top:2.5%;
 }
-
+/* Titre des parties OK*/
 .content h3{
   font-weight:900;
   color:#D64E26;
   font-size:1.3em;
   padding-top: 2.5%;
 }
+/*Listing des MP et des infos OK*/
 .timeline ul p:nth-child(even){
   padding-top:0;
   width: 100%;
   font-size:0.9em;
   line-height:1.7em;
 }
-
 
 /*
 @media screen and (min-width: 1400px) {
@@ -197,45 +197,36 @@ h1 {
     size: 120%;
     padding-right: 5%;
 }
+
 .timeline{
-  width:100%;
-  padding-bottom:0;
+    width:100%;
+    padding-bottom:0;
+  }
+  .timeline:before{
+    left:30px;
+  }
+  .timeline li:nth-child(even), .timeline li:nth-child(odd) {
+    width:100%;
+  }
+  .content {
+    top:20px;
+    text-align:left;
+    padding-left:50px;
+    padding-bottom:50px;
+  }
+  .timeline ul li:nth-child(odd):before,  .timeline ul li:nth-child(even):before{
+    left:14px;
+  }
+
+  .timeline ul li:nth-child(odd) .next, .timeline ul li:nth-child(even) .next{
+    left:90px;
+    top:-30px;
+    
+    /* not sure why this works */
+    right:inherit;
+  }
 }
-.timeline:before{
-  left:30px;
-}
-.content h3{
-  font-size:1.3em;
-}
-.content p {
-  font-size:0.9em;
-}
-.timeline:before{
-  content:'';
-  position:absolute;
-  left:16.5%;
-  width:2px;
-  height:100%;
-  background-color:#D64E26;
-}
-.timeline li:nth-child(even), .timeline li:nth-child(odd) {
-  width:100%;
-}
-.timeline ul li{
-  line-height:normal;
-  position:relative;
-  width:50%;
-  padding:0px 35px;
-}
-.content {
-  top:20px;
-  text-align:left;
-  padding-left:50px;
-  padding-bottom:50px;
-}
-.timeline ul li:nth-child(odd):before,  .timeline ul li:nth-child(even):before{
-  left:14px;
-}
+
 }
 
 @media screen and (max-width: 768px) {
