--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -213,6 +213,7 @@ h1 {
   }
   .timeline li:nth-child(even){
     background-color: black;
+    width:100%;
   } 
 
   .timeline li:nth-child(odd) {
