--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -208,6 +208,12 @@ h1 {
     padding-bottom:0;
     background-color: grey;
   }
+.timeline ul li{
+  list-style: none;
+  position:relative;
+  width:100%;
+  padding:5px 35px;
+}
   .timeline:before{
     left:30px;
   }
