--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -219,7 +219,7 @@ h1 {
   position:absolute;
   width:0.7%;
   height:100%;
-  background-color:#D64E26;
+  background-color:black;
 }
 
 /*styling the size of each step/content OK */
