--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -205,7 +205,7 @@ h1 {
   position: relative;
   margin: 0px auto;
   width:100%;
-  
+  background-color: grey;
 }
 /*Style du texte sous la date OK*/
 .ajoutMP{
@@ -238,7 +238,7 @@ h1 {
   clear:both;
   right: 8%;
   width: 100%;
-  background-color: blue;
+  background-color: pink;
 }
 
 /* for every even numbered bullet point, align to the right OK*/
@@ -246,9 +246,8 @@ h1 {
   text-align:left;
   float:right;
   clear:both;
-  left: 2%;
   width: 100%;
-  background-color: green;
+  background-color: white;
 }
 
 /*create circle icon on the timeline from the left (odd) OK */
