--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -228,7 +228,7 @@ h1 {
   list-style: none;
   position:relative;
   width:50%;
-  padding:5px 35px;
+  padding:5px ;
 }
 
 /*for every odd numbered bullet point, align to the left OK*/
