--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -42,7 +42,7 @@ html, body {
 /**********************************
 ***********TIMELINE****************
 **********************************/
-
+@media screen and (min-width: 990px) and (max-width: 1600px) {
 /*set up size of the whole timeline OK */
 .timeline{
   position: relative;
@@ -133,7 +133,7 @@ html, body {
   font-size:0.9em;
   line-height:1.7em;
 }
-
+}
 /*
 @media screen and (min-width: 1400px) {
 h1 {
