--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -184,7 +184,7 @@ h1 {
 }
 }
 */
-@media screen and (max-width: 990px) {
+@media screen and (min-width: 760px) and (max-width: 990px){
 h1 {
    width: 100%;
    font-style: bold;
