--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -164,7 +164,7 @@ h1 {
 /*drawing the line itself */
 .timeline:before{
   content:'';
-
+  left: 50%;
   width:0.7%;
   height:100%;
   background-color:#D64E26;
@@ -209,7 +209,7 @@ h1 {
 
 /*position the circle icons on the timeline OK*/
 .timeline ul li:nth-child(even):before{
-  left:-20px;
+  right:-20px;
 }
 .timeline ul li:nth-child(odd):before{
   right:-20px;
