--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -170,6 +170,7 @@ h1 {
 .timeline:before{
   content:'';
   position:absolute;
+  left: 40%;
   width:0.7%;
   height:100%;
   background-color:#D64E26;
