--- a/html/css/style.css
+++ b/html/css/style.css
@@ -15,8 +15,8 @@ html, body {
   color: #494747;
 }
 .notifi1 .notifi2 {
-  color: red;
-  display: none;
+  color: blue;
+  
 }
 .interpop{
   color: #6586B4;
