--- a/html/css/style.css
+++ b/html/css/style.css
@@ -16,7 +16,8 @@ html, body {
 }
 .notifi1 {
   color: red;
-  position: absolute;  
+  position: absolute; 
+  top: 5%; 
 }
 .interpop{
   color: #6586B4;
