--- a/html/css/style.css
+++ b/html/css/style.css
@@ -17,7 +17,8 @@ html, body {
 .notifi1 {
   color: red;
   position: absolute; 
-  top: 5%; 
+  top: 2%;
+  right: 1%; 
 }
 .interpop{
   color: #6586B4;
