--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -165,6 +165,10 @@ b{
   height: 20%;
   width: 20%;
 }
+.card-img-top {
+  max-width: 30px;
+  max-height: 30px;
+}
 /*#########################
 ########COPYRIGHT##########
 #########################*/
