--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -166,8 +166,8 @@ b{
   width: 20%;
 }
 .card-img-top {
-  max-width: 1rem;
-  max-height: 1rem;
+  max-width: 1em;
+  max-height: 1em;
 }
 /*#########################
 ########COPYRIGHT##########
