--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -49,6 +49,9 @@ b{
 .sources li {
   font-weight: bold;
 }
+.sources {
+  box-shadow: 17px 23px 22px 0px rgba(251,229,214,1);
+}
 .blanccorrectionmisenepage{
   height: 5%;
 }
