--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -50,7 +50,7 @@ b{
   padding: none;
 }
 .sources {
-  border: 1px solid;
+  border: 1px solid #D64E26;
   box-shadow: 3px 3px 22px 0px rgba(251,229,214,1);
 }
 .blanccorrectionmisenepage{
