--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -47,7 +47,9 @@ b{
   color: #6586B4;
 }
 .sources li {
-  padding: none;
+  padding: 0;
+  margin:0;
+  list-style-type: none;
   font-size: 0.5em;
 }
 .sources {
