--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -552,6 +552,13 @@ font-size: 10px;
   width:100%;
   background-color: #E1E5DC
 }
+/* Titre des parties OK*/
+.content h3{
+  font-weight:900;
+  color:#D64E26;
+  font-size:0.9em;
+  padding-top: 2.5%;
+}
 /*Style du texte sous la date OK*/
 .ajoutMP{
   color:black;
