--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -555,7 +555,8 @@ font-size: 10px;
 /* Titre des parties OK*/
 .content h3{
   color:#D64E26;
-  font-size:0.9em;
+  font-size:1.2em;
+  font-weight: bold;
   padding-top: 2.5%;
 }
 /*Style du texte sous la date OK*/
