--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -567,10 +567,17 @@ font-size: 10px;
 }
 /*drawing the line itself OK */
 .timeline:before{
-  content:'';
   position:absolute;
   left:50%;
   width:0.5em;
   height:100%;
   background-color:#D64E26;
+}
+/*styling the size of each step/content OK */
+.timeline ul li{
+  list-style: none;
+  position:relative;
+  width:50%;
+  padding:5px 35px;
+  background-color: #D0B5C0
 }
