--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -578,6 +578,6 @@ font-size: 10px;
   list-style: none;
   position:relative;
   width:50%;
-  padding:5px 35px;
+  padding:5px ;
   background-color: #D0B5C0
 }
