--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -581,3 +581,13 @@ font-size: 10px;
   padding:5px 35px;
   background-color: #D0B5C0
 }
+
+/*for every odd numbered bullet point, align to the left OK*/
+.timeline ul li:nth-child(odd){
+  text-align:right;
+  float:left;
+  clear:both;
+  right: 8%;
+  width: 55.5%;
+  background-color: #D9DE96
+}
