--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -587,7 +587,7 @@ font-size: 10px;
   text-align:right;
   float:left;
   clear:both;
-
+  right: 4%;
   width: 55.5%;
   background-color: #D9DE96
 }
