--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -589,5 +589,14 @@ font-size: 10px;
   clear:both;
   right: 4%;
   width: 52.5%;
-  background-color: #D9DE96
+  background-color: #D9DE96;
+}
+/* for every even numbered bullet point, align to the right OK*/
+.timeline ul li:nth-child(even){
+  text-align:left;
+  float:right;
+  clear:both;
+  left: 2%;
+  width: 54.5%;
+  background-color: #D9DE96;
 }
