--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -596,7 +596,7 @@ font-size: 10px;
   text-align:left;
   float:right;
   clear:both;
-  left: 0%;
+  right: 1%;
   width: 50%;
   background-color: #D9DE96;
 }
