--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -596,7 +596,7 @@ font-size: 10px;
   text-align:left;
   float:right;
   clear:both;
-
-  width: 52%;
+  left:1%;
+  width: 51.5%;
   background-color: #D9DE96;
 }
