--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -600,3 +600,15 @@ font-size: 10px;
   width: 52%;
   background-color: #D9DE96;
 }
+
+/*create circle icon on the timeline from the left (odd) OK */
+.timeline ul li:before {
+  content:'';
+  position:absolute;
+  width:40px;
+  height:40px;
+  background-color:#F7B88E;
+  border-radius:60%;
+  box-shadow: 0 0 0 6px rgba(251, 229, 214);
+  z-index:1
+}
