--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -605,8 +605,8 @@ font-size: 10px;
 .timeline ul li:before {
   content:'';
   position:absolute;
-  width:10%;
-  height:40%;
+  width:40px;
+  height:40px;
   background-color:#F7B88E;
   border-radius:60%;
   box-shadow: 0 0 0 6px rgba(251, 229, 214);
