--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -616,3 +616,6 @@ font-size: 10px;
 .timeline ul li:nth-child(even):before{
   left: -3.6%;
 }
+.timeline ul li:nth-child(odd):before{
+  right:-3.6%;
+}
