--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -648,3 +648,12 @@ font-size: 10px;
   text-align:center;
   padding-top:1%;
 }
+
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+  .timeline{
+  position: relative;
+  margin: 0px auto;
+  width:100%;
+  background-color: yellow;
+}
+  }
