--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -651,25 +651,24 @@ font-size: 10px;
 }
 
 @media screen and (min-width: 1200px) and (max-width: 1400px) {
-.timeline{
-  background-color: yellow;
-}
-/*for every odd numbered bullet point, align to the left OK*/
-.timeline ul li:nth-child(odd){
-  right: 5.7%;
-  width: 53.5%;
-}
-.timeline ul li:nth-child(odd):before{
-  right:-5%;
-}
-/* for every even numbered bullet point, align to the right OK*/
-.timeline ul li:nth-child(even){
-  left:1.1%;
-  width: 52.5%;
-}
-/*position the circle icons on the timeline OK*/
-.timeline ul li:nth-child(even):before{
-  left: -5%;
+
+  /*for every odd numbered bullet point, align to the left OK*/
+  .timeline ul li:nth-child(odd){right: 5.7%; width: 53.5%;}
+  .timeline ul li:nth-child(odd):before{right:-5%;}
+  /* for every even numbered bullet point, align to the right OK*/
+  .timeline ul li:nth-child(even){left:1.1%;width: 52.5%;}
+  /*position the circle icons on the timeline OK*/
+  .timeline ul li:nth-child(even):before{left: -5%;}
 }
 
+@media screen and (min-width: 990px) and (max-width: 1200px) {
+  /*set up size of the whole timeline OK */
+  .timeline{background-color: yellow;}
+  /*for every odd numbered bullet point, align to the left OK*/
+  .timeline ul li:nth-child(odd){right: 5.7%; width: 53.5%;}
+  .timeline ul li:nth-child(odd):before{right:-5%;}
+  /* for every even numbered bullet point, align to the right OK*/
+  .timeline ul li:nth-child(even){left:1.1%;width: 52.5%;}
+  /*position the circle icons on the timeline OK*/
+  .timeline ul li:nth-child(even):before{left: -5%;}
 }
