--- a/html/css/stylesansmap.css
+++ b/html/css/stylesansmap.css
@@ -572,7 +572,6 @@ font-size: 10px;
   position: relative;
   margin: 0px auto;
   width:100%;
-  background-color: #E1E5DC
 }
 /* Titre des parties OK*/
 .content h3{
@@ -611,7 +610,6 @@ font-size: 10px;
   clear:both;
   right: 4%;
   width: 52.5%;
-  background-color: #D9DE96;
 }
 /* for every even numbered bullet point, align to the right OK*/
 .timeline ul li:nth-child(even){
@@ -620,7 +618,6 @@ font-size: 10px;
   clear:both;
   left:1.1%;
   width: 52%;
-  background-color: #D9DE96;
 }
 
 /*create circle icon on the timeline from the left (odd) OK */
@@ -665,10 +662,14 @@ font-size: 10px;
   /*set up size of the whole timeline OK */
   .timeline{background-color: yellow;}
   /*for every odd numbered bullet point, align to the left OK*/
-  .timeline ul li:nth-child(odd){right: 5.7%; width: 53.5%;}
+  .timeline ul li:nth-child(odd){right: 5.7%; width: 53.5%;
+    background-color: #D9DE96;
+  }
   .timeline ul li:nth-child(odd):before{right:-5%;}
   /* for every even numbered bullet point, align to the right OK*/
-  .timeline ul li:nth-child(even){left:1.1%;width: 52.5%;}
+  .timeline ul li:nth-child(even){left:1.1%;width: 52.5%;
+    background-color: #D9DE96;
+  }
   /*position the circle icons on the timeline OK*/
   .timeline ul li:nth-child(even):before{left: -5%;}
 }
